# image_pipeline

image_view/: CMakeLists.txt
image_view/src/nodes/: image_saver.cpp  image_view.cpp
stereo_image_proc/: CMakeLists.txt  package.xml
stereo_image_proc/include/stereo_image_proc/: disparity.hpp  point_cloud2.hpp  processor.h  visibility.h
stereo_image_proc/src/libstereo_image_proc/: processor.cpp
stereo_image_proc/src/nodelets/: disparity.cpp  point_cloud2.cpp
stereo_image_proc/src/nodes/: stereo_image_proc.cpp
