<package format="2">
  <name>stereo_image_proc</name>
  <version>2.0</version>
  <description>Stereo and single image rectification and disparity processing.</description>
  <author>Patrick Mihelich</author>
  <author>Kurt Konolige</author>
  <author>Jeremy Leibs</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/stereo_image_proc</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>class_loader</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
